# C_Calculator

./: CMakeLists.txt  generate.py  main.c
Error/: Error.h  ErrorCollection.c
IO/: IO.h  input_basic.c  input_validity_check.c  user_instruction.c  user_instruction.txt
Modules/DataType/: DataType.c  DataType.h
Modules/SeqList/: SeqList.c  SeqList.h
Modules/SeqStack/: SeqStack.c  SeqStack.h
Test/: engine.c  engine.h
Test/test_data/: math_expressions.csv
calculate/: calculate.c  calculate.h  operator.c  operator.h
